--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- FontAwesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <script defer src="scripts.js"></script>
 </head>
+
 <body>
     <div class="todo-app">
         <h1>My ToDo List</h1>
+
+        <div>
+            <input type="text" id="search-task" placeholder="Search tasks..." onkeyup="searchTasks()">
+        </div>
+
+        <ul id="task-list"></ul>
+
         <div class="input-container">
             <input type="text" id="new-task" placeholder="Add a new task...">
             <button id="add-task"><i class="fa fa-plus"></i></button>
@@ -25,4 +36,5 @@
         <ul id="task-list"></ul>
     </div>
 </body>
+
 </html>
